# newstarter

./: .gitignore  README.md
.github/workflows/: python-tests.yml
CMake/: CommonSetup.cmake
Jenkins/: README.md  buildscript.py  msbuildscript.bat
data/: ex01.txt  ex01_out.txt  hyphen-test.txt
ex01_basics/: CMakeLists.txt
ex01_basics/src/: main.cpp
ex02_oo_basics/: CMakeLists.txt
ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.h  ShapeSorter.cpp  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
exercises-cpp/hello_world/: hello_world.cpp
exercises-cpp/template/: CMakeLists.txt  README.md
exercises-cpp/template/ex02_oo_basics/: CMakeLists.txt
exercises-cpp/template/ex02_oo_basics/src/: main.cpp
exercises-python/sam-tygier/ex01_basics/: main.py
exercises-python/sam-tygier/ex02_oo_basics/: main.py
exercises-python/template/: README.md
exercises/Daniel_Murphy/ex01_basics/src/: TAOSH.txt  main.cpp
exercises/Daniel_Murphy/ex02_oo_basics/: CMakeLists.txt
exercises/Daniel_Murphy/ex02_oo_basics/src/: main.cpp  main.h  shape.cpp  shape.h
exercises/Mathieu_Tillet/ex01_basics/src/: main.cpp
exercises/Mathieu_Tillet/ex02_oo_basics/: CMakeLists.txt
exercises/Mathieu_Tillet/ex02_oo_basics/src/: circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shapesorter.cpp  shapesorter.h  shapesorter.h.autosave  square.cpp  square.h  triangle.cpp  triangle.h
exercises/Phil_Colebrooke/ex01_basics/: CMakeLists.txt
exercises/Phil_Colebrooke/ex01_basics/src/: main.cpp  main.h
exercises/Phil_Colebrooke/ex02_oo_basics/: CMakeLists.txt
exercises/Phil_Colebrooke/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeSorter.cpp  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
exercises/Richard_Waite/ex01_basics/src/: main.cpp
exercises/Richard_Waite/ex02_oo_basics/: CMakeLists.txt
exercises/Richard_Waite/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeSorter.cpp  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
exercises/Toluwalase_Agoro/ex01_basics/src/: main.cpp
exercises/Toluwalase_Agoro/ex02_oo_basics/: CMakeLists.txt
exercises/ciara_nightingale/ex01_basics/: CMakeLists.txt
exercises/ciara_nightingale/ex02_oo_basics/: CMakeLists.txt
exercises/ciara_nightingale/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeSorter.cpp  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
exercises/conor_finn/ex01_basics/: CMakeLists.txt
exercises/conor_finn/ex02_oo_basics/: CMakeLists.txt
exercises/conor_finn/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeSorter.cpp  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
exercises/cpp/ex01_basics/: CMakeLists.txt
exercises/danny_hindson/ex02_oo_basics/: CMakeLists.txt
exercises/dolica_akelloegwel/: CMakeLists.txt
exercises/dolica_akelloegwel/ex01_basics/: CMakeLists.txt
exercises/dolica_akelloegwel/ex02_oo_basics/: CMakeLists.txt
exercises/dolica_akelloegwel/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeSorter.cpp  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
exercises/dolica_akelloegwel/ex02_oo_basics/tests/: TriangleTests.cpp
exercises/giovanni_disiena/ex01_basics/: CMakeLists.txt
exercises/giovanni_disiena/ex02_oo_basics/: CMakeLists.txt
exercises/giovanni_disiena/ex02_oo_basics/src/: Circle.cpp  Circle.h  Polygon.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeBase.cpp  ShapeBase.h  ShapeSorter.cpp  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  Use.cpp  Use.h  main.cpp  main.h
exercises/guillaume_communie/ex02_oo_basics/: CMakeLists.txt
exercises/guillaume_communie/ex02_oo_basics/inc/: Circle.h  Rectangle.h  Shape.h  ShapeSorter.h  Square.h  Triangle.h
exercises/guillaume_communie/ex02_oo_basics/src/: Circle.cpp  Rectangle.cpp  Shape.cpp  ShapeSorter.cpp  Square.cpp  Triangle.cpp  main.cpp
exercises/harriet_brown/ex02_oo_basics/: CMakeLists.txt
exercises/hello_world/: CMakeLists.txt
exercises/joseph_torsney/ex02_oo_basics/: CMakeLists.txt
exercises/joseph_torsney/ex02_oo_basics/src/: circle.cpp  circle.h  main.cpp  rect.cpp  rect.h  shape.cpp  shape.h  shapeSorter.cpp  shapeSorter.h  square.cpp  square.h  triangle.cpp  triangle.h
exercises/matthew_cumber/: CMakeLists.txt
exercises/matthew_cumber/ex01_basics/: CMakeLists.txt
exercises/matthew_cumber/ex02_oo_basics/: CMakeLists.txt
exercises/matthew_cumber/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.h  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
exercises/sam_tygier/ex01_basics/: CMakeLists.txt
exercises/sam_tygier/ex01_basics/src/: main.cpp  words.cpp  words.h
exercises/sam_tygier/ex02_oo_basics/: CMakeLists.txt
exercises/sam_tygier/ex02_oo_basics/src/: circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shape_sorter.cpp  shape_sorter.h  square.cpp  square.h  triangle.cpp  triangle.h
exercises/silke_schomann/ex02_oo_basics/: CMakeLists.txt
exercises/srikanth_ravipati/: CMakeLists.txt
exercises/srikanth_ravipati/ex01_basics/: CMakeLists.txt
exercises/srikanth_ravipati/ex02_oo_basics/: CMakeLists.txt
exercises/tom_clayton/: CMakeLists.txt
exercises/tom_clayton/ex01_basics/: CMakeLists.txt
exercises/tom_clayton/ex01_basics/src/: CMakeLists.txt  Results.txt  atlasshrugged.txt  hyphentest.txt  main.cpp
exercises/tom_clayton/ex02_oo_basics/: CMakeLists.txt
exercises/tom_clayton/ex02_oo_basics/src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeSorter.cpp  ShapeSorter.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
exercises/tom_hampson/ex02_oo_basics/: CMakeLists.txt
tests/: test_python.py
(+120 files in other folders)
